--- a/parte1.css
+++ b/parte1.css
@@ -1,6 +1,8 @@
 header {
-    background-color: #995052;
-    padding: 10px;
+    background-color: #9e906e;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
 }
 
 header img {
@@ -9,7 +11,80 @@ header img {
 }
 
 .sessão-1 {
-    background-image: url(imagem/woman-8853114_1280.jpg);
-    padding: 250px
+    background-image: url(imagem/fashion-2309519_1280.jpg);
+    padding: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
+}
+
+.sessão-1 button {
+    width: 150px;
+    height: 40px;
+    background-color: white;
+    border-radius: 7px;
+}
+
+.sessão-2 {
+    padding: 300px;
+    background-color: #b47941;
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.sessão-2 img {
+    width: 200px;
+    height: auto;
+}
+
+.sessão-2 h2 {
+    color: black;
+    font-size: 30px;
+    font-weight: bold;
+    margin top: 15px;
+}
+
+.sessão-2 p {
+    color: black;
+    font-size: 17px;
+    margin top: 15px;
+
+}
+
+
+
+
+
+
+.sessão-3 {
+    background-image: url(imagem/woman-4390055_1280.jpg);
+    padding: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.sessão-3 h2 {
+    color: black;
+    font-size: 45px;
+    font-weight: bolder;
+    margin-top: 15px;
+}
+
+.sessão-3 p {
+    color: black;
+    font-size: 20px;
+    margin-top: 15px;
+
+}
+
+footer {
+    padding: 15px;
+    background-color: #aab69b;
+
 }
