--- a/parte1.css
+++ b/parte1.css
@@ -1,33 +1,66 @@
-header {
-    background-color: #9e906e;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
+/* ( * ) Usado para informar que existem itens que irão recair sobre todo o HTML */
+* {
+    margin: 0; /* Zerando a margin(top, bottom, right, left */
+    padding: 0; /* Zerando o preenchimento */
+    font-family: 'Times New Roman', Times, serif; /* Habilitando uma fonte padrão para toda a página*/
+    list-style: none; /* Removendo os estilos de listas */
 }
 
+/* Chamamos nosso cabeçalho para estilização (Header) */
+header { 
+    background-color: #9e906e; /*  Habilitando uma cor de fundo*/
+    padding: 15px; /* Colocando um tamanho (Preenchimento) no Header*/
+    display: flex; /* Tornando nosso Header Flex - Deixando os itens lado a lado*/
+    justify-content: space-evenly; /* Justificativa do conteúdo - Aqui podemos ajustar conforme nossa necessidade*/
+    align-items: center; /* Alinhamento na vertical - Deixando habilitada ao centro*/
+}
+
+  /*Aqui chama nossa logo(img) para estilização*/
 header img {
-    width: 100px;
-    height: auto;
+    width: 100px; /* Largura da imagem*/
+    height: auto; /*Altura da imagem*/
 }
 
-.sessão-1 {
-    background-image: url(imagem/fashion-2309519_1280.jpg);
-    padding: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+/*Aqui chamamos nossa lista não ordenada para estilização*/
+header nav ul {
+    display: flex; /*Tornamos nossa lista não ordenada em (Flex), deixando os itens pertencentes a ela, lado a lado.*/
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+/* Chamamos nossa lista (Li) para estilização*/
+header nav ul li {
+    list-style: none; /*Estilo de lista desabilitado*/
+    margin-right: 10px; /* espaçamento entre as (Li)*/
     
 }
 
+/*Aqui chamamos nossa âncora (a) para estilização*/
+header nav ul li a {
+    text-decoration: none; /*Decoração do texto (sublinhado) desabilitado (none)*/
+    color: whitesmoke; /*Cor da Letra*/
+
+}
+
+ /*Primeira sessão para estilização*/
+.sessão-1 {
+    background-image: url(imagem/fashion-2309519_1280.jpg); /*Usada para habilitar uma imagem no fundo da sessão*/
+    padding: 300px; /*preenchimento/Tamanho da sessão*/
+    background-repeat: no-repeat; /*para a imagem não se repetir dentro da sessão*/
+    background-size: cover; /*Utilizada para que a imagem preencha todo espaço disponivel*/
+    background-position: center;
+
+    display: flex; /*Tornando a sessão flex*/
+    justify-content: center; /*Justificando conteúdo ao centro (horizontal*/
+    align-items: center; /*Alinhando os itens ao centro (vertical)*/
+    
+}
+
+ /*Chamando o Botão da primeira Sessão para a estilização*/
 .sessão-1 button {
-    width: 150px;
-    height: 40px;
-    background-color: white;
-    border-radius: 7px;
+    width: 150px; /*Largura do botão*/
+    height: 40px; /*Altura do botão*/
+    background-color: rgba(255, 255, 255, 0.623); /*Cor de fundo*/
+    border-radius: 7px; /*Arredondamento da borda*/
 }
 
 .sessão-2 {
@@ -52,7 +85,7 @@ header img {
 
 .sessão-2 p {
     color: black;
-    font-size: 17px;
+    font-size: 18px;
     margin top: 15px;
 
 }
@@ -64,27 +97,52 @@ header img {
 
 .sessão-3 {
     background-image: url(imagem/woman-4390055_1280.jpg);
+    background-attachment: fixed;
     padding: 300px;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
-.sessão-3 h2 {
+.sessão-3 h3 {
     color: black;
-    font-size: 45px;
-    font-weight: bolder;
-    margin-top: 15px;
+    font-size: 35px;
+    font-weight: 900;
+    margin top: 15px;
 }
 
 .sessão-3 p {
     color: black;
-    font-size: 20px;
+    font-size: 17px;
     margin-top: 15px;
+    font-weight: 600;
+    margin top: 15px;
 
 }
 
 footer {
     padding: 15px;
     background-color: #aab69b;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
 }
+
+footer nav ul {
+    display: flex;
+        
+}
+
+footer nav ul li {
+    list-style: none;
+    margin-right: 15px;
+    
+}
+
+footer nav ul li a {
+    text-decoration: none;
+    color: black;
+
+}
+
