--- a/parte1.css
+++ b/parte1.css
@@ -47,7 +47,7 @@ header nav ul li a {
     padding: 300px; /*preenchimento/Tamanho da sessão*/
     background-repeat: no-repeat; /*para a imagem não se repetir dentro da sessão*/
     background-size: cover; /*Utilizada para que a imagem preencha todo espaço disponivel*/
-    background-position: center;
+    background-position: center; /*Deixar a imagem centralizada.*/
 
     display: flex; /*Tornando a sessão flex*/
     justify-content: center; /*Justificando conteúdo ao centro (horizontal*/
@@ -62,6 +62,7 @@ header nav ul li a {
     background-color: rgba(255, 255, 255, 0.623); /*Cor de fundo*/
     border-radius: 7px; /*Arredondamento da borda*/
 }
+
 
 .sessão-2 {
     padding: 300px;
